# kwin-sliding-notifications

./: .gitignore  CMakeLists.txt  README.md  SlidingEffect.cpp  kwin_final_sliding.json  kwin_slidingnotifs.json
